@@ -1,6 +1,5 @@
 package io.github.gaming32.worldhost.toast;
 
-import com.mojang.blaze3d.platform.Window;
 import com.mojang.blaze3d.vertex.PoseStack;
 import io.github.gaming32.worldhost.gui.screen.WorldHostScreen;
 import io.github.gaming32.worldhost.versions.Components;
@@ -60,9 +59,9 @@ public class WHToast {
             toast.calculateText();
             playSound(toast.important ? IMPORTANT : REGULAR);
             if (!TOASTS.isEmpty()) {
-                if (Y_OFFSET + 2 * toast.height + GAP <= TOASTS.get(0).y) {
+                if (Y_OFFSET + 2 * toast.height + GAP <= TOASTS.getFirst().y) {
                     toast.y = Y_OFFSET;
-                    TOASTS.add(0, toast);
+                    TOASTS.addFirst(toast);
                     return;
                 }
                 for (int i = 0; i < TOASTS.size() - 1; i++) {
@@ -74,7 +73,7 @@ public class WHToast {
                         return;
                     }
                 }
-                final ToastInstance lastToast = TOASTS.get(TOASTS.size() - 1);
+                final ToastInstance lastToast = TOASTS.getLast();
                 toast.y = lastToast.y + lastToast.height + GAP;
             } else {
                 toast.y = Y_OFFSET;
@@ -113,7 +112,7 @@ public class WHToast {
         poseStack.pushPose();
         poseStack.translate(0f, 0f, 100f);
 
-        final Window window = Minecraft.getInstance().getWindow();
+        final var window = Minecraft.getInstance().getWindow();
         final int screenWidth = window.getGuiScaledWidth();
         final int screenHeight = window.getGuiScaledHeight();
 
@@ -134,7 +133,7 @@ public class WHToast {
             return false;
         }
 
-        final Window window = Minecraft.getInstance().getWindow();
+        final var window = Minecraft.getInstance().getWindow();
         final int screenWidth = window.getGuiScaledWidth();
         final int screenHeight = window.getGuiScaledHeight();
 
